--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
@@ -88,7 +91,7 @@ repositories {
 }
 
 dependencies {
-    implementation("net.dv8tion:JDA:5.0.0-beta.20")
+    implementation name: 'discord-rpc'
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
@@ -109,6 +112,9 @@ dependencies {
 
 // Example for how to get properties into the manifest for reading at runtime.
 jar {
+    from('libs') {
+        include '**'
+    }
     manifest {
         attributes([
                 "Specification-Title"     : "blockraid",
